# dwdwfsapi

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
.github/workflows/: auto_assign.yml  python_testing.yml  update_celllists.yml  update_warncells.yml
docs/: biocells.json  biocells.md  pollencells.json  pollencells.md  update_biocell_list.py  update_biocells_list.py  update_pollencell_list.py  update_warncell_list.py  warncells.json  warncells.md
dwdwfsapi/: __init__.py  core.py  weatherwarnings.py
src/dwdwfsapi/: __init__.py  bioweather.py  core.py  pollenflight.py  weatherwarnings.py
tests/: test_bioweather.py  test_pollenflight.py  test_weatherwarnings.py
