[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dwdwfsapi"
version = "1.1.0"
authors = [
    { name="stephan192", email="stephan192@outlook.com" },
]
description = "Python client to retrieve data provided by DWD via their geoserver WFS API"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["dwd", "ows", "wfs", "deutscher wetterdienst"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "urllib3>=1.26.5",
]

[project.urls]
Homepage = "https://github.com/stephan192/dwdwfsapi"
Issues = "https://github.com/stephan192/dwdwfsapi/issues"

[tool.hatch.build]
exclude = [
    "/.github",
    "/docs",
    "/tests",
]

[tool.isort]
profile = "black"

[tool.pylint.main]
recursive = true

[tool.pylint.'MESSAGES CONTROL']
disable = 'duplicate-code'

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
